# artyfy-backend

./: .env.example  API_DOCUMENTATION.md  Dockerfile  README.md  app.py  auth.py  docker-compose.yml  firebase_config.py  main.py  models.py  pyproject.toml  setup.py  storage.py  tasks.py
migrations/: README  env.py
migrations/versions/: 7fc290cc2f5b_initial_migration.py  8469f6986aad_initial_migration.py
